...
                                        <color key="backgroundColor" name="GrassGreen"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="hzp-8i-wNG" secondAttribute="height" multiplier="4:3" id="4VV-7R-yDn"/>
                                            <constraint firstAttribute="width" constant="100" id="xDe-sT-HKg"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="TimeBurner" family="TimeBurner" pointSize="30"/>
                                        <state key="normal" title="Start">
                                            <color key="titleColor" name="SnowWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="startButtonTouchedDown:" destination="fqh-kg-PoI" eventType="touchDown" id="dyR-26-GSr"/>
                                            <segue destination="RzF-6g-6o0" kind="presentation" identifier="startGame" id="a1p-Pl-QoX"/>
                                        </connections>
...
                                        <color key="backgroundColor" name="GrassGreen"/>
                                        <constraints>
                                            <constraint firstAttribute="width" priority="750" constant="100" id="2iC-7E-9Tk"/>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="900" constant="80" id="ZwP-e5-Pts"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="TimeBurner" family="TimeBurner" pointSize="18"/>
                                        <state key="normal" title="New game">
                                            <color key="titleColor" name="SnowWhite"/>
                                        </state>
                                        <variation key="heightClass=compact-widthClass=compact">
                                            <fontDescription key="fontDescription" name="TimeBurner" family="TimeBurner" pointSize="12"/>
                                        </variation>
                                        <connections>
...
