//
//  GridyUITests.swift
//  GridyUITests
//
//  Created by Alexandra Ivanova on 05/07/2021.
//  Copyright © 2021 Alex Ivanova. All rights reserved.
//

import XCTest

class GridyUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        app.buttons[" Pick"].tap()
        XCTAssertTrue(app.buttons["Start"].waitForExistence(timeout: 1))
        app.buttons["Start"].tap()
        XCTAssertTrue(app.buttons["New game"].waitForExistence(timeout: 1))
        app.buttons["New game"].tap()
        XCTAssertTrue(app.buttons[" Pick"].waitForExistence(timeout: 1))
        XCTAssert(app.buttons[" Pick"].exists)
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
}
